cmake_minimum_required(VERSION 3.5)

project(project_cpp)

# Set the C++ standard to use
set(CMAKE_CXX_STANDARD 14)

# Add the executable target
add_executable(run_A src/task_A.cpp)
add_executable(run_B src/task_B.cpp)
add_executable(run_C src/task_C.cpp)
add_executable(run_D src/task_D.cpp)
add_executable(run_E src/task_E.cpp)
add_executable(run_F src/task_F.cpp)
add_executable(run_G src/task_G.cpp)
add_executable(run_H src/task_H.cpp)
add_executable(run_I src/task_I.cpp)
add_executable(run_J src/task_J.cpp)
add_executable(run_K src/task_K.cpp)
add_executable(run_L src/task_L.cpp)
add_executable(run_M src/task_M.cpp)
add_executable(run_N src/task_N.cpp)
add_executable(run_O src/task_O.cpp)
add_executable(run_P src/task_P.cpp)
add_executable(run_Q src/task_Q.cpp)
add_executable(run_R src/task_R.cpp)
add_executable(run_S src/task_S.cpp)
add_executable(run_T src/task_T.cpp)



include_directories(include)